risolto errori javadoc